--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit.html
@@ -180,16 +180,16 @@
               <div class="col-sm-6">
                 <div class="custom-control custom-checkbox">
                   <input [(ngModel)]="row.carousel.showStoryNavigator"
-                         type="checkbox" class="custom-control-input" id="show-story-navigator">
+                         type="checkbox" class="custom-control-input" [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-navigator')">
                   <label class="custom-control-label"
-                         for="show-story-navigator">Show Story Navigator
+                         [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-navigator')">Show Story Navigator
                   </label>
                 </div>
                 <div class="custom-control custom-checkbox">
                   <input [(ngModel)]="row.carousel.showIndicators"
-                         type="checkbox" class="custom-control-input" id="show-story-indicators">
+                         type="checkbox" class="custom-control-input" [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-indicators')">
                   <label class="custom-control-label"
-                         for="show-story-indicators">Show Indicators
+                         [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-indicators')">Show Indicators
                   </label>
                 </div>
                 <div class="form-inline">
