--- a/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
@@ -102,7 +102,7 @@ audio[controls], canvas, video
 .map-thumbnail-image-dialog
   border-radius: 10px
   margin: 0px 20px 3px 0px
-  width: 373px
+  width: 100%
   height: 300px
 
 .map-thumbnail-image
