- upgrade to Angular 16 - and other dependencies - removed dependency on Angular2CSV and copied an older version of the typescript code into the project to csv-export.ts - all tests passing - needed production build to be "optimization": {"styles": {"inlineCritical": false }},

--- a/projects/ngx-ramblers/src/app/assets/styles/styles.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/styles.sass
@@ -1,29 +1,29 @@
-@import "~bootstrap"
-@import "colours"
-@import "tagify"
-@import "bs-datepicker"
-@import "ui-switch"
-@import "tagify"
-@import "ramblers.select.theme"
-@import "legacy"
-@import "ramblers"
-@import "alerts"
-@import "buttons"
-@import "backgrounds"
-@import "text"
-@import "lists"
-@import "links"
-@import "frames"
-@import "radios"
-@import "checkboxes"
-@import "icons"
-@import "pagination"
-@import "content-edit"
-@import "tables"
-@import "tabs"
-@import "cursors"
-@import "notifications"
-@import "cards"
+@import "bootstrap"
+@import "./colours"
+@import "./tagify"
+@import "./bs-datepicker"
+@import "./ui-switch"
+@import "./tagify"
+@import "./ramblers.select.theme"
+@import "./legacy"
+@import "./ramblers"
+@import "./alerts"
+@import "./buttons"
+@import "./backgrounds"
+@import "./text"
+@import "./lists"
+@import "./links"
+@import "./frames"
+@import "./radios"
+@import "./checkboxes"
+@import "./icons"
+@import "./pagination"
+@import "./content-edit"
+@import "./tables"
+@import "./tabs"
+@import "./cursors"
+@import "./notifications"
+@import "./cards"
 
 // media breakpoints
 // col-sm for larger mobile phones (devices with resolutions ≥ 576px);
