--- a/projects/ngx-ramblers/src/app/pages/social/social-list-cards/social-list-cards.sass
+++ b/projects/ngx-ramblers/src/app/pages/social/social-list-cards/social-list-cards.sass
@@ -1,4 +1,4 @@
-@import "~bootstrap"
+@import "bootstrap"
 @import "../../../assets/styles/colours"
 @import "../../../assets/styles/buttons"
 @import "../../../assets/styles/text"
