--- a/projects/ngx-ramblers/src/app/pages/walks/walk-edit/walk-edit.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-edit/walk-edit.component.html
@@ -398,10 +398,11 @@
               Google Maps. This map will be displayed in the detail view of the walk.</p>
             <input type="number" min="1" max="20" *ngIf="false"
                    [(ngModel)]="display.googleMapsConfig.zoomLevel">
-            <iframe *ngIf="display.mapViewReady(googleMapsUrl)" class="map-thumbnail-image-dialog"
-                    frameborder="0"
+            <iframe *ngIf="display.mapViewReady(googleMapsUrl)"
+                    allowfullscreen
+                    class="map-thumbnail-image-dialog"
                     style="border:0;border-radius: 10px;"
-                    [src]="googleMapsUrl" allowfullscreen></iframe>
+                    [src]="googleMapsUrl"></iframe>
           </div>
         </div>
       </div>
