- final styling changes before angular 16 go-live

--- a/projects/ngx-ramblers/src/app/assets/styles/checkboxes.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/checkboxes.sass
@@ -1,4 +1,4 @@
-@import "colours"
+@import "./colours"
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before
   background: $ramblers-colour-sunrise
