--- a/projects/ngx-ramblers/src/app/pages/committee/home/committee-home.component.html
+++ b/projects/ngx-ramblers/src/app/pages/committee/home/committee-home.component.html
@@ -1,4 +1,4 @@
-<app-page>
+<app-page [pageTitle]="'Committee'">
   <app-committee-year [committeeYear]="committeeYear"  [notify]="notify"></app-committee-year>
   <app-dynamic-content [anchor]="'action-buttons'" [contentPathReadOnly]="true"></app-dynamic-content>
   <div class="row">
