--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit.html
@@ -20,28 +20,26 @@
           class="text-muted">{{stringUtils.pluraliseWithCount(pageContent?.rows.length, 'row')}}</small>)</h4>
         <ng-template #saveButtonsAndPath>
           <div class="form-inline">
-            <div (click)="savePageContent()"
-                 delay=500 [tooltip]="'Save page changes'" class="badge-button">
-              <fa-icon [icon]="faSave"></fa-icon>
-              Save page changes
-            </div>
-            <div (click)="revertPageContent()"
-                 delay=500 [tooltip]="'Revert page changes'" class="badge-button">
-              <fa-icon [icon]="faUndo"></fa-icon>
-              Revert page changes
-            </div>
-            <div *ngIf="this.insertableContent?.length > 0" (click)="insertData()"
-                 delay=500 [tooltip]="'Insert missing data'" class="badge-button">
-              <fa-icon [icon]="faAdd"></fa-icon>
-              Insert data
-            </div>
-            <div (click)="deletePageContent()"
-                 delay=500
-                 [tooltip]="deletePagContentTooltip()"
-                 [ngClass]="buttonClass(allReferringPages().length === 0)">
-              <fa-icon [icon]="faRemove"></fa-icon>
-              Delete page
-            </div>
+            <app-badge-button (click)="savePageContent()"
+                              delay=500 [tooltip]="'Save page changes'"
+                              [icon]="faSave"
+                              caption="Save page changes">
+            </app-badge-button>
+            <app-badge-button (click)="revertPageContent()"
+                              delay=500 [tooltip]="'Revert page changes'"
+                              [icon]="faUndo"
+                              caption="Revert page changes">
+            </app-badge-button>
+            <app-badge-button *ngIf="insertableContent?.length > 0" (click)="insertData()"
+                              delay=500 [tooltip]="'Insert missing data'"
+                              [icon]="faAdd" caption="Insert data">
+            </app-badge-button>
+            <app-badge-button (click)="deletePageContent()"
+                              [icon]="faRemove"
+                              delay=500 caption="Delete page"
+                              [tooltip]="deletePagContentTooltip()"
+                              [disabled]="allReferringPages().length !== 0">
+            </app-badge-button>
             <ng-container *ngIf="this.allReferringPageCount() > 0">
               <div class="align-middle">Referred to by: <a class="ml-1"
                                                            *ngFor="let referringPage of allReferringPages(); let linkIndex = index;"
@@ -140,7 +138,7 @@
               </select>
             </div>
             <div class="col-auto" app-row-settings-carousel
-                 *ngIf="actions.isCarousel(row)" [row]="row">
+                 *ngIf="actions.isCarouselOrAlbum(row)" [row]="row">
             </div>
             <div class="col-auto" app-row-settings-action-buttons
                  *ngIf="actions.isActionButtons(row)" [row]="row"></div>
@@ -170,37 +168,75 @@
                               [pageContent]="pageContent"
                               [rowIndex]="rowIndex">
           </app-action-buttons>
-          <ng-container *ngIf="actions.isCarousel(row)">
+          <ng-container *ngIf="actions.isCarouselOrAlbum(row)">
             <div *ngIf="!editActive(rowIndex)" class="row">
               <div class="col-sm-6">
-                <app-carousel *ngIf="actions.isCarousel(row)" [carouselData]="carouselData(row)"
+                <app-carousel *ngIf="actions.isCarousel(row)"
+                              [carouselData]="albumData(row)"
                               [hideStoryNavigator]="true"
-                              [index]="actions.carouselIndex(row, pageContent)"></app-carousel>
+                              [index]="actions.carouselOrAlbumIndex(row, pageContent)"></app-carousel>
+                <app-album preview *ngIf="actions.isAlbum(row)"
+                              [album]="albumData(row)"
+                              [index]="actions.carouselOrAlbumIndex(row, pageContent)"></app-album>
               </div>
               <div class="col-sm-6">
-                <div class="custom-control custom-checkbox">
-                  <input [(ngModel)]="row.carousel.showStoryNavigator"
-                         type="checkbox" class="custom-control-input" [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-navigator')">
-                  <label class="custom-control-label"
-                         [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-navigator')">Show Story Navigator
-                  </label>
+                <div class="row">
+                  <div class="col-auto">
+                    <div class="custom-control custom-checkbox">
+                      <input [(ngModel)]="row.carousel.showStoryNavigator"
+                             type="checkbox" class="custom-control-input"
+                             [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-navigator')">
+                      <label class="custom-control-label"
+                             [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-navigator')">Show
+                        Story Navigator</label>
+                    </div>
+                  </div>
+                  <div class="col-auto">
+                    <div class="custom-control custom-checkbox">
+                      <input [(ngModel)]="row.carousel.showIndicators"
+                             type="checkbox" class="custom-control-input"
+                             [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-indicators')">
+                      <label class="custom-control-label"
+                             [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-indicators')">
+                        Show Indicators</label>
+                    </div>
+                  </div>
+                  <div class="col-auto">
+                    <div class="custom-control custom-checkbox">
+                      <input [(ngModel)]="row.carousel.allowSwitchView"
+                             type="checkbox" class="custom-control-input"
+                             [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-allow-switch-view')">
+                      <label class="custom-control-label"
+                             [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-allow-switch-view')">
+                        Allow Switch View</label>
+                    </div>
+                  </div>
                 </div>
-                <div class="custom-control custom-checkbox">
-                  <input [(ngModel)]="row.carousel.showIndicators"
-                         type="checkbox" class="custom-control-input" [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-indicators')">
-                  <label class="custom-control-label"
-                         [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-show-story-indicators')">Show Indicators
-                  </label>
-                </div>
-                <div class="form-inline">
-                <label [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-slide-interval')">Slide
-                  interval in seconds</label>
-                <input [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-slide-interval')" #input
-                       (input)="row.carousel.slideInterval=actions.constrainInput(input, 0,30) * 1000"
-                       [value]="row.carousel.slideInterval/1000"
-                       autocomplete="columns"
-                       class="form-control input-sm column-input ml-2" placeholder="Enter slide interval in seconds"
-                       type="number">
+                <div class="row">
+                  <div class="col-auto">
+                    <div class="form-group">
+                      <label [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-album-view')">
+                        Album View</label>
+                      <select class="form-control input-sm"
+                              [(ngModel)]="row.carousel.albumView"
+                              [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-album-view')">
+                        <option *ngFor="let type of enumKeyValuesForAlbumView"
+                                [ngValue]="type.value">{{stringUtils.asTitle(type.value)}}</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="col-auto">
+                    <div class="form-group">
+                      <label [for]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-slide-interval')">
+                        Slide interval in seconds</label>
+                      <input [id]="actions.rowColumnIdentifierFor(rowIndex, 0, this.contentPath + '-slide-interval')"
+                             #input (input)="row.carousel.slideInterval=actions.constrainInput(input, 0,30) * 1000"
+                             [value]="row.carousel.slideInterval/1000"
+                             autocomplete="columns"
+                             class="form-control interval-input"
+                             type="number">
+                    </div>
+                  </div>
                 </div>
                 <app-badge-button [icon]="faPencil" (click)="toggleEditMode(rowIndex)"
                                   [caption]="'Edit'"></app-badge-button>
