--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-view.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-view.html
@@ -13,7 +13,10 @@
     </app-dynamic-content-view-text-row>
     <app-dynamic-content-view-carousel *ngIf="actions.isCarousel(row)"
                                        [row]="row"
-                                       [index]="actions.carouselIndex(row, viewablePageContent)"></app-dynamic-content-view-carousel>
+                                       [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"></app-dynamic-content-view-carousel>
+    <app-dynamic-content-view-album *ngIf="actions.isAlbum(row)"
+                                       [row]="row"
+                                       [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"></app-dynamic-content-view-album>
   </ng-container>
   <ng-container *ngIf="!actions.pageContentFound(viewablePageContent, !!viewablePageContent?.id)">
     <div *ngIf="notify.alertTarget.showAlert" class="col-12 alert {{notify.alertTarget.alertClass}} mt-3">
