--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/image/system-image-edit.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/image/system-image-edit.html
@@ -1,14 +1,14 @@
 <div class="row mb-3 mt-3">
   <div class="col-md-12">
     <h5>{{logoTitle()}}</h5>
-    <app-image-cropper
+    <app-image-cropper-and-resizer
       *ngIf="logoEditActive"
       [rootFolder]="images?.rootFolder"
       [preloadImage]="image.awsFileName"
       (imageChange)="imageChange($event)"
       (quit)="exitImageEdit()"
       (save)="imagedSaved($event)">
-    </app-image-cropper>
+    </app-image-cropper-and-resizer>
   </div>
   <div class="col-md-6 mt-2">
     <div class="row">
@@ -66,7 +66,7 @@
     <div class="row">
       <label>Image Preview</label>
     </div>
-    <img  [src]="imageSourceOrPreview()" [alt]="image.originalFileName"
+    <img [src]="imageSourceOrPreview()" [alt]="image.originalFileName"
          [style]="'width:' + image.width +'px; padding: '+ image.padding +'px; height: auto;'"
          [ngClass]="image.awsFileName.endsWith('png') ? 'image-border-png':'image-border'">
   </div>
