--- a/projects/ngx-ramblers/src/app/pages/committee/year/committee-year.html
+++ b/projects/ngx-ramblers/src/app/pages/committee/year/committee-year.html
@@ -1,6 +1,5 @@
 <ng-template #committeeYearTemplate>
-  <h2>{{committeeYearTitle}}</h2>
-  <app-markdown-editor class="body-text" category="committee" [name]="'introduction'"
+  <app-markdown-editor category="committee" [name]="'introduction'"
                        description="Introduction"></app-markdown-editor>
   <div class="card mb-3">
     <div class="wrapper w-100 position-relative">
